# wasmedge-custom-plugin

./: .gitignore
.github/workflows/: release-image.yml
app/: Cargo.toml  Dockerfile
app/.cargo/: config.toml
app/src/: main.rs
plugin/: Cargo.toml
plugin/src/: backends.rs  helper.rs  lib.rs  main.rs  squeezenet.rs  wasi_nn.rs  whisper.rs
