[package]
name = "wasmedge-custom-plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# squeezenet-burn = { git = "https://github.com/tracel-ai/models", package = "squeezenet-burn", features = ["weights_embedded"], default-features = false }
wasmedge_plugin_sdk = { git = "https://github.com/second-state/wasmedge_plugin_rust_sdk.git", features = ["standalone"] }
burn = { version = "0.19.1", default-features = false, features = ["ndarray", "cuda", "wgpu", "cpu"] }
wgpu = "26.0.1"
futures = "0.3.31"
wasmedge-wasi-nn = "0.8.0"
bytemuck = "1.16.0"
once_cell = "1.19"